vendor/bifrost/tls/bindings/x509.odin


	// X509_CRL_get_ext_d2i behaves like |X509V3_get_d2i| but looks for the
	// extension in |crl|'s extension list.
	//
	// WARNING: This function is difficult to use correctly. See the documentation
	// for |X509V3_get_d2i| for details.
	X509_CRL_get_ext_d2i :: proc(crl: ^X509_CRL, nid: i32, out_critical: ^i32, out_idx: ^i32) -> rawptr ---

	// X509_CRL_get0_signature sets |*out_sig| and |*out_alg| to the signature and
	// signature algorithm of |crl|, respectively. Either output pointer may be NULL
	// to ignore the value.
	//
	// This function outputs the outer signature algorithm, not the one in the
	// TBSCertList. CRLs with mismatched signature algorithms will successfully
	// parse, but they will be rejected when verifying.
	X509_CRL_get0_signature :: proc(crl: ^X509_CRL, out_sig: ^^ASN1_BIT_STRING, out_alg: ^^X509_ALGOR) ---

	// X509_CRL_get_signature_nid returns the NID corresponding to |crl|'s signature
	// algorithm, or |NID_undef| if the signature algorithm does not correspond to
	// a known NID.
	X509_CRL_get_signature_nid :: proc(crl: ^X509_CRL) -> i32 ---

	// i2d_X509_CRL_tbs serializes the TBSCertList portion of |crl|, as described in
	// |i2d_SAMPLE|.
	//
	// This function preserves the original encoding of the TBSCertList and may not
	// reflect modifications made to |crl|. It may be used to manually verify the
	// signature of an existing CRL. To generate CRLs, use |i2d_re_X509_CRL_tbs|
	// instead.
	i2d_X509_CRL_tbs :: proc(crl: ^X509_CRL, outp: ^^u8) -> i32 ---

	// X509_CRL_verify checks that |crl| has a valid signature by |pkey|. It returns
	// one if the signature is valid and zero otherwise.
	X509_CRL_verify :: proc(crl: ^X509_CRL, pkey: ^EVP_PKEY) -> i32 ---

	// X509_CRL_new returns a newly-allocated, empty |X509_CRL| object, or NULL on
	// error. This object may be filled in and then signed to construct a CRL.
	X509_CRL_new :: proc() -> ^X509_CRL ---

	// X509_CRL_set_version sets |crl|'s version to |version|, which should be one
	// of the |X509_CRL_VERSION_*| constants. It returns one on success and zero on
	// error.
	//
	// If unsure, use |X509_CRL_VERSION_2|. Note that, unlike certificates, CRL
	// versions are only defined up to v2. Callers should not use |X509_VERSION_3|.
	X509_CRL_set_version :: proc(crl: ^X509_CRL, version: c.long) -> i32 ---

	// X509_CRL_set_issuer_name sets |crl|'s issuer to a copy of |name|. It returns
	// one on success and zero on error.
	X509_CRL_set_issuer_name :: proc(crl: ^X509_CRL, name: ^X509_NAME) -> i32 ---

	// X509_CRL_set1_lastUpdate sets |crl|'s thisUpdate time to |tm|. It returns one
	// on success and zero on error. The OpenSSL API refers to this field as
	// lastUpdate.
	X509_CRL_set1_lastUpdate :: proc(crl: ^X509_CRL, tm: ^ASN1_TIME) -> i32 ---

	// X509_CRL_set1_nextUpdate sets |crl|'s nextUpdate time to |tm|. It returns one
	// on success and zero on error.
	X509_CRL_set1_nextUpdate :: proc(crl: ^X509_CRL, tm: ^ASN1_TIME) -> i32 ---

	// X509_CRL_add0_revoked adds |rev| to |crl|. On success, it takes ownership of
	// |rev| and returns one. On error, it returns zero. If this function fails, the
	// caller retains ownership of |rev| and must release it when done.
	X509_CRL_add0_revoked :: proc(crl: ^X509_CRL, rev: ^X509_REVOKED) -> i32 ---

	// X509_CRL_sort sorts the entries in |crl| by serial number. It returns one on
	// success and zero on error.
	X509_CRL_sort :: proc(crl: ^X509_CRL) -> i32 ---

	// X509_CRL_delete_ext removes the extension in |x| at index |loc| and returns
	// the removed extension, or NULL if |loc| was out of bounds. If non-NULL, the
	// caller must release the result with |X509_EXTENSION_free|.
	X509_CRL_delete_ext :: proc(x: ^X509_CRL, loc: i32) -> ^X509_EXTENSION ---

	// X509_CRL_add_ext adds a copy of |ex| to |x|. It returns one on success and
	// zero on failure. The caller retains ownership of |ex| and can release it
	// independently of |x|.
	//
	// The new extension is inserted at index |loc|, shifting extensions to the
	// right. If |loc| is -1 or out of bounds, the new extension is appended to the
	// list.
	X509_CRL_add_ext :: proc(x: ^X509_CRL, ex: ^X509_EXTENSION, loc: i32) -> i32 ---

	// X509_CRL_add1_ext_i2d behaves like |X509V3_add1_i2d| but adds the extension
	// to |x|'s extension list.
	//
	// WARNING: This function may return zero or -1 on error. The caller must also
	// ensure |value|'s type matches |nid|. See the documentation for
	// |X509V3_add1_i2d| for details.
	X509_CRL_add1_ext_i2d :: proc(x: ^X509_CRL, nid: i32, value: rawptr, crit: i32, flags: c.ulong) -> i32 ---

	// X509_CRL_sign signs |crl| with |pkey| and replaces the signature algorithm
	// and signature fields. It returns the length of the signature on success and
	// zero on error. This function uses digest algorithm |md|, or |pkey|'s default
	// if NULL. Other signing parameters use |pkey|'s defaults. To customize them,
	// use |X509_CRL_sign_ctx|.
	X509_CRL_sign :: proc(crl: ^X509_CRL, pkey: ^EVP_PKEY, md: ^EVP_MD) -> i32 ---

	// X509_CRL_sign_ctx signs |crl| with |ctx| and replaces the signature algorithm
	// and signature fields. It returns the length of the signature on success and
	// zero on error. The signature algorithm and parameters come from |ctx|, which
	// must have been initialized with |EVP_DigestSignInit|. The caller should
	// configure the corresponding |EVP_PKEY_CTX| before calling this function.
	//
	// On success or failure, this function mutates |ctx| and resets it to the empty
	// state. Caller should not rely on its contents after the function returns.
	X509_CRL_sign_ctx :: proc(crl: ^X509_CRL, ctx: ^EVP_MD_CTX) -> i32 ---

	// i2d_re_X509_CRL_tbs serializes the TBSCertList portion of |crl|, as described
	// in |i2d_SAMPLE|.
	//
	// This function re-encodes the TBSCertList and may not reflect |crl|'s original
	// encoding. It may be used to manually generate a signature for a new CRL. To
	// verify CRLs, use |i2d_X509_CRL_tbs| instead.
	i2d_re_X509_CRL_tbs :: proc(crl: ^X509_CRL, outp: ^^u8) -> i32 ---

	// X509_CRL_set1_signature_algo sets |crl|'s signature algorithm to |algo| and
	// returns one on success or zero on error. It updates both the signature field
	// of the TBSCertList structure, and the signatureAlgorithm field of the CRL.
	X509_CRL_set1_signature_algo :: proc(crl: ^X509_CRL, algo: ^X509_ALGOR) -> i32 ---

	// X509_CRL_set1_signature_value sets |crl|'s signature to a copy of the
	// |sig_len| bytes pointed by |sig|. It returns one on success and zero on
	// error.
	//
	// Due to a specification error, X.509 CRLs store signatures in ASN.1 BIT
	// STRINGs, but signature algorithms return byte strings rather than bit
	// strings. This function creates a BIT STRING containing a whole number of
	// bytes, with the bit order matching the DER encoding. This matches the
	// encoding used by all X.509 signature algorithms.
	X509_CRL_set1_signature_value :: proc(crl: ^X509_CRL, sig: ^u8, sig_len: c.size_t) -> i32 ---

	// X509_REVOKED_new returns a newly-allocated, empty |X509_REVOKED| object, or
	// NULL on allocation error.
	X509_REVOKED_new :: proc() -> ^X509_REVOKED ---

	// X509_REVOKED_free releases memory associated with |rev|.
	X509_REVOKED_free :: proc(rev: ^X509_REVOKED) ---

	// d2i_X509_REVOKED parses up to |len| bytes from |*inp| as a DER-encoded X.509
	// CRL entry, as described in |d2i_SAMPLE|.
	d2i_X509_REVOKED :: proc(out: ^^X509_REVOKED, inp: ^^u8, len: c.long) -> ^X509_REVOKED ---

	// i2d_X509_REVOKED marshals |alg| as a DER-encoded X.509 CRL entry, as
	// described in |i2d_SAMPLE|.
	i2d_X509_REVOKED :: proc(alg: ^X509_REVOKED, outp: ^^u8) -> i32 ---

	// X509_REVOKED_dup returns a newly-allocated copy of |rev|, or NULL on error.
	// This function works by serializing the structure, so if |rev| is incomplete,
	// it may fail.
	X509_REVOKED_dup :: proc(rev: ^X509_REVOKED) -> ^X509_REVOKED ---

	// X509_REVOKED_get0_serialNumber returns the serial number of the certificate
	// revoked by |revoked|.
	X509_REVOKED_get0_serialNumber :: proc(revoked: ^X509_REVOKED) -> ^ASN1_INTEGER ---

	// X509_REVOKED_set_serialNumber sets |revoked|'s serial number to |serial|. It
	// returns one on success or zero on error.
	X509_REVOKED_set_serialNumber :: proc(revoked: ^X509_REVOKED, serial: ^ASN1_INTEGER) -> i32 ---

	// X509_REVOKED_get0_revocationDate returns the revocation time of the
	// certificate revoked by |revoked|.
	X509_REVOKED_get0_revocationDate :: proc(revoked: ^X509_REVOKED) -> ^ASN1_TIME ---

	// X509_REVOKED_set_revocationDate sets |revoked|'s revocation time to |tm|. It
	// returns one on success or zero on error.
	X509_REVOKED_set_revocationDate :: proc(revoked: ^X509_REVOKED, tm: ^ASN1_TIME) -> i32 ---

	// X509_REVOKED_get0_extensions returns |r|'s extensions list, or NULL if |r|
	// omits it. A CRL can have extensions on individual entries, which is this
	// function, or on the overall CRL, which is |X509_CRL_get0_extensions|.
	X509_REVOKED_get0_extensions :: proc(r: ^X509_REVOKED) -> ^stack_st_X509_EXTENSION ---

	// X509_REVOKED_get_ext_count returns the number of extensions in |x|.
	X509_REVOKED_get_ext_count :: proc(x: ^X509_REVOKED) -> i32 ---

	// X509_REVOKED_get_ext_by_NID behaves like |X509v3_get_ext_by_NID| but searches
	// for extensions in |x|.
	X509_REVOKED_get_ext_by_NID :: proc(x: ^X509_REVOKED, nid: i32, lastpos: i32) -> i32 ---

	// X509_REVOKED_get_ext_by_OBJ behaves like |X509v3_get_ext_by_OBJ| but searches
	// for extensions in |x|.
	X509_REVOKED_get_ext_by_OBJ :: proc(x: ^X509_REVOKED, obj: ^ASN1_OBJECT, lastpos: i32) -> i32 ---

	// X509_REVOKED_get_ext_by_critical behaves like |X509v3_get_ext_by_critical|
	// but searches for extensions in |x|.
	X509_REVOKED_get_ext_by_critical :: proc(x: ^X509_REVOKED, crit: i32, lastpos: i32) -> i32 ---

	// X509_REVOKED_get_ext returns the extension in |x| at index |loc|, or NULL if
	// |loc| is out of bounds. This function returns a non-const pointer for OpenSSL
	// compatibility, but callers should not mutate the result.
	X509_REVOKED_get_ext :: proc(x: ^X509_REVOKED, loc: i32) -> ^X509_EXTENSION ---

	// X509_REVOKED_delete_ext removes the extension in |x| at index |loc| and
	// returns the removed extension, or NULL if |loc| was out of bounds. If
	// non-NULL, the caller must release the result with |X509_EXTENSION_free|.
	X509_REVOKED_delete_ext :: proc(x: ^X509_REVOKED, loc: i32) -> ^X509_EXTENSION ---

	// X509_REVOKED_add_ext adds a copy of |ex| to |x|. It returns one on success
	// and zero on failure. The caller retains ownership of |ex| and can release it
	// independently of |x|.
	//
	// The new extension is inserted at index |loc|, shifting extensions to the
	// right. If |loc| is -1 or out of bounds, the new extension is appended to the
	// list.
	X509_REVOKED_add_ext :: proc(x: ^X509_REVOKED, ex: ^X509_EXTENSION, loc: i32) -> i32 ---

	// X509_REVOKED_get_ext_d2i behaves like |X509V3_get_d2i| but looks for the
	// extension in |revoked|'s extension list.
	//
	// WARNING: This function is difficult to use correctly. See the documentation
	// for |X509V3_get_d2i| for details.
	X509_REVOKED_get_ext_d2i :: proc(revoked: ^X509_REVOKED, nid: i32, out_critical: ^i32, out_idx: ^i32) -> rawptr ---

	// X509_REVOKED_add1_ext_i2d behaves like |X509V3_add1_i2d| but adds the
	// extension to |x|'s extension list.
	//
	// WARNING: This function may return zero or -1 on error. The caller must also
	// ensure |value|'s type matches |nid|. See the documentation for
	// |X509V3_add1_i2d| for details.
	X509_REVOKED_add1_ext_i2d :: proc(x: ^X509_REVOKED, nid: i32, value: rawptr, crit: i32, flags: c.ulong) -> i32 ---

	// X509_REQ_dup returns a newly-allocated copy of |req|, or NULL on error. This
	// function works by serializing the structure, so if |req| is incomplete, it
	// may fail.
	X509_REQ_dup :: proc(req: ^X509_REQ) -> ^X509_REQ ---

	// X509_REQ_free releases memory associated with |req|.
	X509_REQ_free :: proc(req: ^X509_REQ) ---
